GNOME Bugzilla – Bug 746586
crtical warnings in a11y if focus widget is destroyed
Last modified: 2015-03-22 01:29:50 UTC
Created attachment 300041 [details] [review] be defensive if gdkwindow has been destroyed I've seen this a bunch in Builder, and just finally had a moment to go track it down. It seems that when destroying the focus widget, we get into a cycle where a D-Bus message has been dispatched, and the reply is causing us to look up character extents within the widget. Since the GdkWindow has been destroyed, this will always fail, after printing a critical warning. I *think* I've seen crashes before, but that could have been related to something else.
+ Trace 234876